kubernetes/apps/download-clients/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  labels:
    app.kubernetes.io/name: download-clients
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
