kubernetes/apps/download-clients/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: downloads
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/component: torrent-client
    app.kubernetes.io/part-of: download-clients
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: webui
    protocol: TCP
    name: webui
  - port: 6881
    targetPort: torrent-tcp
    protocol: TCP
    name: torrent-tcp
  - port: 6881
    targetPort: torrent-udp
    protocol: UDP
    name: torrent-udp
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/component: torrent-client
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: downloads
  labels:
    app.kubernetes.io/name: nzbget
    app.kubernetes.io/component: usenet-client
    app.kubernetes.io/part-of: download-clients
spec:
  type: ClusterIP
  ports:
  - port: 6789
    targetPort: webui
    protocol: TCP
    name: webui
  selector:
    app.kubernetes.io/name: nzbget
    app.kubernetes.io/component: usenet-client
